--- a/FoxesAndBunnies/FoxesAndBunnies.vcxproj
+++ b/FoxesAndBunnies/FoxesAndBunnies.vcxproj
@@ -128,7 +128,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Animal.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="NameStorage.cpp" />
+    <ClCompile Include="Rabbit.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Animal.h" />
+    <ClInclude Include="NameStorage.h" />
+    <ClInclude Include="Rabbit.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
