Added examples and notes.

--- a/FoxesAndBunnies/FoxesAndBunnies.vcxproj.filters
+++ b/FoxesAndBunnies/FoxesAndBunnies.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Rabbit.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Examples.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animal.h">
