--- a/FoxesAndBunnies/FoxesAndBunnies.vcxproj
+++ b/FoxesAndBunnies/FoxesAndBunnies.vcxproj
@@ -129,6 +129,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Animal.cpp" />
+    <ClCompile Include="Examples.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="NameStorage.cpp" />
     <ClCompile Include="Rabbit.cpp" />
